--- a/_posts/2019-08-01-ocp.markdown
+++ b/_posts/2019-08-01-ocp.markdown
@@ -4,7 +4,6 @@ title:  "Oracle Certified Professional, Java SE 8 Programmer"
 date:   2019-08-01 14:42:00 +0300
 categories: java ocp
 ---
-[![Alt](https://images.youracclaim.com/images/add1b0f5-493a-4082-ae41-184ba20c8832/5274_badge_600x600_Certified-Professional-Java--SE-8-Programmer.png "Oracle Certified Professional, Java SE 8 Programmer")](https://www.youracclaim.com/badges/f631f92a-c5f3-462c-a3a5-9d97dba2e8eb)
+[![Oracle Certified Professional, Java SE 8 Programmer](https://images.youracclaim.com/size/340x340/images/3e1a7290-fade-4be4-9bcd-1a7743294a81/Oracle_Professional_Badge__1_.png "Oracle Certified Professional, Java SE 8 Programmer")](https://www.youracclaim.com/badges/f631f92a-c5f3-462c-a3a5-9d97dba2e8eb)
 
-> An Oracle Certified Professional, Java SE 8 Programmer has validated their Java development skills by answering challenging, real-world, 
-scenario-based questions that measure problem solving skills using Java code.
+> An Oracle Certified Professional, Java SE 8 Programmer has validated their Java development skills by answering challenging, real-world, scenario-based questions that measure problem solving skills using Java code.
